// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Saga: searchUsers when a cached result exists should pass the result to the success action and not call the API 1`] = `
Object {
  "meta": Object {
    "fromCache": true,
  },
  "payload": Object {
    "data": "foo",
    "search": "q=simon",
  },
  "type": "SEARCH_SUCCESS",
}
`;

exports[`Saga: searchUsers when a cached result exists should pass the result to the success action and not call the API 2`] = `
Object {
  "meta": Object {
    "fromCache": true,
  },
  "type": "API_RATE_LIMIT_REQUEST",
}
`;

exports[`Saga: searchUsers when a request to the API fails should call a failure action 1`] = `
Object {
  "error": true,
  "payload": [Error: it went wrong],
  "type": "SEARCH_FAILURE",
}
`;

exports[`Saga: searchUsers when no cached data exists should call the API and put a success action with the payload 1`] = `
Object {
  "meta": Object {
    "fromCache": false,
  },
  "payload": Object {
    "entities": Object {
      "users": Object {
        "123": Object {
          "avatar_url": "foo",
          "id": 123,
          "login": "alecrust",
        },
        "456": Object {
          "avatar_url": "foo",
          "id": 456,
          "login": "simonsmith",
        },
      },
    },
    "pagination": null,
    "result": Array [
      123,
      456,
    ],
    "search": "q=simon",
    "totalResults": 2,
  },
  "type": "SEARCH_SUCCESS",
}
`;
